--- a/src/app/components/FormInventarioItem/FormInventarioItem.css
+++ b/src/app/components/FormInventarioItem/FormInventarioItem.css
@@ -1,6 +1,6 @@
 .form-inventario-item {
     display: flex;
-    width: 750px;
+    width: 55vw;
     height: 75px;
     gap: 20px;
     padding: 20px;
