--- a/src/app/components/FormReceitas/FormReceitas.css
+++ b/src/app/components/FormReceitas/FormReceitas.css
@@ -2,12 +2,15 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    background-color: #EDF1D6;
+    width: 100vw;
+    height: 100vh;
 }
 
 .receitas-form-item {
     display: flex;
     flex-direction: column;
-    height: 450px;
+    height: 650px;
     overflow: auto;
     gap: 10px;
 }
