--- a/src/app/components/FormReceitas/FormReceitas.css
+++ b/src/app/components/FormReceitas/FormReceitas.css
@@ -1,3 +1,5 @@
+body.active-modal {overflow-y: hidden;}
+
 .form-receitas {
     display: flex;
     flex-direction: column;
@@ -10,7 +12,24 @@
 .receitas-form-item {
     display: flex;
     flex-direction: column;
-    height: 650px;
+    height: 65vh;
     overflow: auto;
     gap: 10px;
+    border-bottom: 3px solid #40513B;
+}
+
+.form-cadastro-receita {
+    font-size: 22px;
+    margin: auto;
+}
+
+.form-cadastro-receita > input {
+    font-size: 22px;
+    width: 30vw;
+    height: 40px;
+    text-align: center;
+    align-items: center;
+    color: black;
+    margin: 15px;
+    border-radius: 25px;
 }
