--- a/src/app/components/FormReceitasItem/FormReceitasItem.css
+++ b/src/app/components/FormReceitasItem/FormReceitasItem.css
@@ -1,3 +1,5 @@
+body.active-modal {overflow-y: hidden;}
+
 .form-receitas-item {
     display: flex;
     width: 750px;
@@ -5,6 +7,7 @@
     gap: 20px;
     padding: 20px;
     margin-left: 10px;
+    margin-top: 30px;
     background-color: #D1D2CA;
     border-radius: 50px;
     align-items: center;
@@ -19,4 +22,52 @@
 
 .form-receitas-item p {
     font-size: 18px;
+}
+
+.btn-modal {
+    padding: 10px 20px;
+    display: block;
+    margin: 100px auto 0;
+    font-size: 18px;
+}
+
+.modal, .overlay {
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+}
+
+.overlay {
+    background: rgba(49,49,49,0.8);
+}
+.modal-content {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    line-height: 1.4;
+    background: #f1f1f1;
+    padding: 14px 28px;
+    border-radius: 3px;
+    max-width: 600px;
+    min-width: 300px;
+}
+
+.close-modal {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 5px 7px;
+    border-radius: 25px;
+}
+
+.btn-default {
+    top: 10px;
+    right: 10px;
+    padding: 5px 7px;
+    border-radius: 25px;
 }
